@@ -6,8 +6,9 @@
 #-----------------------------------------------------------------------------#
 
 Version: 0.2
-Date:
+Date: xx/xx/xxxx
 
++ Use aliases for command names
 
 #-----------------------------------------------------------------------------#
 
